--- a/pom.xml
+++ b/pom.xml
@@ -672,12 +672,11 @@
                   <rule>
                     <element>BUNDLE</element>
                     <limits>
-                      <!-- Too easily confused by Kotlin compiler. Try again with 0.8.2 -->
-                      <!--<limit>-->
-                        <!--<counter>COMPLEXITY</counter>-->
-                        <!--<value>COVEREDRATIO</value>-->
-                        <!--<minimum>${coverage.complexity.min}</minimum>-->
-                      <!--</limit>-->
+                      <limit>
+                        <counter>COMPLEXITY</counter>
+                        <value>COVEREDRATIO</value>
+                        <minimum>${coverage.complexity.min}</minimum>
+                      </limit>
                       <limit>
                         <counter>LINE</counter>
                         <value>COVEREDRATIO</value>
