--- a/business-svc/pom.xml
+++ b/business-svc/pom.xml
@@ -82,6 +82,10 @@
       <groupId>org.jetbrains.kotlin</groupId>
       <artifactId>kotlin-stdlib-jdk8</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.jglue.cdi-unit</groupId>
+      <artifactId>cdi-unit</artifactId>
+    </dependency>
   </dependencies>
 
   <build>
