--- a/frontend/src/package.json
+++ b/frontend/src/package.json
@@ -66,7 +66,6 @@
     "webpack-manifest-plugin": "^2.0.3"
   },
   "dependencies": {
-    "crypto-js": "^3.1.9-1",
     "file-saver": "^1.3.8",
     "lodash": "4.17.10",
     "moment": "2.22.2",
@@ -79,6 +78,7 @@
     "react-router-dom": "^4.3.1",
     "redux": "4.0.0",
     "redux-actions": "2.6.1",
-    "redux-thunk": "2.3.0"
+    "redux-thunk": "2.3.0",
+    "universal-cookie": "^2.2.0"
   }
 }
