--- a/frontend/src/package.json
+++ b/frontend/src/package.json
@@ -8,7 +8,9 @@
     "js": "yarn run check && webpack",
     "test": "echo \"Error: no test specified\"",
     "start": "webpack-dev-server --mode development --debug --devtool cheap-module-source-map --output-pathinfo --history-api-fallback --hot --inline --progress --colors --port 3000",
-    "build": "yarn run check && webpack --mode production --progress --colors "
+    "build": "yarn run check && webpack --mode production --progress --colors ",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "engines": {
     "node": ">=8.9.0",
@@ -62,7 +64,13 @@
     "webpack-bundle-analyzer": "^2.13.1",
     "webpack-cli": "^3.1.0",
     "webpack-dev-server": "^3.1.0",
-    "webpack-manifest-plugin": "^2.0.3"
+    "webpack-manifest-plugin": "^2.0.3",
+    "@storybook/react": "^3.4.10",
+    "@storybook/addon-actions": "^3.4.10",
+    "@storybook/addon-links": "^3.4.10",
+    "@storybook/addons": "^3.4.10",
+    "babel-core": "^6.26.3",
+    "babel-runtime": "^6.26.0"
   },
   "dependencies": {
     "crypto-js": "^3.1.9-1",
