--- a/frontend/src/package.json
+++ b/frontend/src/package.json
@@ -23,6 +23,10 @@
   "author": "",
   "license": "LGPL-2.1",
   "devDependencies": {
+    "@storybook/addon-actions": "^3.4.10",
+    "@storybook/addon-links": "^3.4.10",
+    "@storybook/addons": "^3.4.10",
+    "@storybook/react": "^3.4.10",
     "@types/crypto-js": "^3.1.38",
     "@types/history": "4.7.0",
     "@types/lodash": "^4.14.104",
@@ -40,6 +44,8 @@
     "@types/webpack-env": "1.13.6",
     "antd": "^3.4.0",
     "awesome-typescript-loader": "^5.2.0",
+    "babel-core": "^6.26.3",
+    "babel-runtime": "^6.26.0",
     "check-engines": "^1.5.0",
     "css-loader": "1.0.0",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
@@ -64,13 +70,7 @@
     "webpack-bundle-analyzer": "^2.13.1",
     "webpack-cli": "^3.1.0",
     "webpack-dev-server": "^3.1.0",
-    "webpack-manifest-plugin": "^2.0.3",
-    "@storybook/react": "^3.4.10",
-    "@storybook/addon-actions": "^3.4.10",
-    "@storybook/addon-links": "^3.4.10",
-    "@storybook/addons": "^3.4.10",
-    "babel-core": "^6.26.3",
-    "babel-runtime": "^6.26.0"
+    "webpack-manifest-plugin": "^2.0.3"
   },
   "dependencies": {
     "crypto-js": "^3.1.9-1",
@@ -83,6 +83,7 @@
     "react-redux": "5.0.7",
     "react-router": "4.3.1",
     "react-router-dom": "^4.3.1",
+    "react-textarea-autosize": "^7.0.4",
     "redux": "4.0.0",
     "redux-actions": "2.6.1",
     "redux-thunk": "2.3.0"
