--- a/frontend/src/package.json
+++ b/frontend/src/package.json
@@ -78,7 +78,6 @@
     "react-router-dom": "^4.3.1",
     "redux": "4.0.0",
     "redux-actions": "2.6.1",
-    "redux-thunk": "2.3.0",
-    "universal-cookie": "^2.2.0"
+    "redux-thunk": "2.3.0"
   }
 }
