--- a/frontend/src/package.json
+++ b/frontend/src/package.json
@@ -37,7 +37,7 @@
     "@types/redux-thunk": "^2.1.0",
     "@types/webpack": "4.4.8",
     "@types/webpack-env": "1.13.6",
-    "antd": "^3.6.5",
+    "antd": "3.8.3",
     "awesome-typescript-loader": "^5.2.0",
     "check-engines": "^1.5.0",
     "css-loader": "1.0.0",
