--- a/frontend/src/package.json
+++ b/frontend/src/package.json
@@ -7,7 +7,7 @@
     "check": "node scripts/check-engines",
     "js": "yarn run check && webpack",
     "test": "echo \"Error: no test specified\"",
-    "start": "webpack-dev-server --mode development --debug --devtool cheap-module-source-map --output-pathinfo --history-api-fallback --hot --inline --progress --colors --port 3000",
+    "watch": "webpack-dev-server --mode development --debug --devtool cheap-module-source-map --output-pathinfo --history-api-fallback --hot --inline --progress --colors --port 3000",
     "build": "yarn run check && webpack --mode production --progress --colors "
   },
   "engines": {
@@ -22,6 +22,7 @@
   "license": "LGPL-2.1",
   "devDependencies": {
     "@types/crypto-js": "^3.1.38",
+    "@types/file-saver": "^1.3.0",
     "@types/history": "4.7.0",
     "@types/lodash": "^4.14.104",
     "@types/moment": "^2.13.0",
@@ -36,7 +37,7 @@
     "@types/redux-thunk": "^2.1.0",
     "@types/webpack": "4.4.8",
     "@types/webpack-env": "1.13.6",
-    "antd": "^3.4.0",
+    "antd": "3.8.3",
     "awesome-typescript-loader": "^5.2.0",
     "check-engines": "^1.5.0",
     "css-loader": "1.0.0",
@@ -65,7 +66,7 @@
     "webpack-manifest-plugin": "^2.0.3"
   },
   "dependencies": {
-    "crypto-js": "^3.1.9-1",
+    "file-saver": "^1.3.8",
     "lodash": "4.17.10",
     "moment": "2.22.2",
     "moment-timezone": "0.5.21",
