change postgresql dependency scope to 'runtime'

--- a/server/pom.xml
+++ b/server/pom.xml
@@ -444,6 +444,7 @@
     <dependency>
       <groupId>org.postgresql</groupId>
       <artifactId>postgresql</artifactId>
+      <scope>runtime</scope>
     </dependency>
 
     <dependency>
